# ecological-computation

./: .gitignore  CITATION.cff  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt
common/: __init__.py  environment.py  features.py  replicated_gbnn.py  robot.py
hfaccpp/: README.md  __init__.py  open_hfaccpp.py
ppstar/: README.md  __init__.py  open_ppstar.py
